# vatee

./: CMakeLists.txt  README.md
code/: CMakeLists.txt
code/generator/: CMakeLists.txt
code/generator/src/: common.cpp  common.hpp  config.cpp  config.hpp  filesystem-win.cpp  filesystem.hpp  generator.cpp  generator.hpp  io.cpp  io.hpp  main.cpp  os-win.cpp  os-win.hpp  os.hpp
code/include/vatee/: pack0.hpp  punctuation.hpp
code/include/vatee/internal/: compiler_version.hpp  emulate0.hpp  expansion.hpp  facility.hpp
code/tests/: CMakeLists.txt  basic0.cpp
test/: basic.cpp  basic0.cpp
